--- a/Thoth/Thoth/Thoth/Views/RssEpisodeListPage.xaml
+++ b/Thoth/Thoth/Thoth/Views/RssEpisodeListPage.xaml
@@ -4,6 +4,7 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:vc="clr-namespace:Thoth.Views.ValueConverters"
+             xmlns:vm="clr-namespace:Thoth.ViewModels"
              mc:Ignorable="d"
              Title="{Binding Title}"
              x:Class="Thoth.Views.RssEpisodeListPage">
@@ -14,6 +15,9 @@
             <vc:InverseBoolConverter x:Key="inverseBoolConverter" />
             <vc:StringIsEmptyToBoolConverter x:Key="stringIsEmptyToBoolConverter" />
             <vc:ImageBorderColorConverter x:Key="ImageBorderColorConverter" />
+            <Style x:Key="InternalViewStyle" TargetType="ContentView">
+                <Setter Property="Padding" Value="3"></Setter>
+            </Style>
             <Style x:Key="BorderStyle" TargetType="ContentView">
                 <Setter Property="BackgroundColor" Value="{Binding IsPlaying, Converter={StaticResource ImageBorderColorConverter}}"/>
             </Style>
@@ -54,40 +58,47 @@
                         </d:CollectionView.ItemsSource>
                         <CollectionView.ItemTemplate>
                             <DataTemplate>
-
-                                        <StackLayout Orientation="Horizontal" Padding="10">
-                                            <StackLayout Orientation="Horizontal" HorizontalOptions="Start">
-                                        <ContentView VerticalOptions="Start" HorizontalOptions="FillAndExpand">
+                                <StackLayout Orientation="Horizontal" Padding="2">
+                                    <StackLayout Orientation="Horizontal" HorizontalOptions="Start">
+                                        <ContentView VerticalOptions="Start" HorizontalOptions="FillAndExpand" IsVisible="{Binding Source={RelativeSource AncestorType={x:Type vm:RssEpisodeListViewModel}}, Path=ShowEpisodeImages}">
                                             <ContentView Style="{StaticResource BorderStyle}">
-                                                <Image Source="{Binding ImageLink, Converter={StaticResource podcastEpisodeImageConverter}}" HeightRequest="80"
+                                                <ContentView Style="{StaticResource InternalViewStyle}">
+                                                    <Image Source="{Binding ImageLink, Converter={StaticResource podcastEpisodeImageConverter}}" HeightRequest="80" WidthRequest="80"
                                                         IsVisible="{Binding ImageLink, Converter={StaticResource stringIsEmptyToBoolConverter}}"/>
+                                                </ContentView>
                                             </ContentView>
                                         </ContentView>
-                                        <StackLayout>
-                                                    <Label Text="{Binding Title}" 
+                                        <StackLayout HeightRequest="90">
+                                            <Label Text="{Binding Title}" 
                                                         d:Text="{Binding .}"
                                                         LineBreakMode="NoWrap" 
                                                         Style="{DynamicResource ListItemTextStyle}" 
+                                                        FontAttributes="Bold"
                                                         FontSize="16" />
-                                                    <Label Text="{Binding Description}" 
+                                            <Label Text="{Binding Description}" 
                                                         d:Text="{Binding .}"
-                                                        LineBreakMode="NoWrap"
+                                                        LineBreakMode="CharacterWrap"
                                                         Style="{DynamicResource ListItemDetailTextStyle}"
                                                         TextType="Html"
                                                         FontSize="13" />
-                                                </StackLayout>
-                                                <StackLayout.GestureRecognizers>
-                                                    <TapGestureRecognizer NumberOfTapsRequired="1" Tapped="OnItemSelected"></TapGestureRecognizer>
-                                                </StackLayout.GestureRecognizers>
-                                            </StackLayout>
-                                            <Button HorizontalOptions="End"
+                                        </StackLayout>
+                                        <StackLayout.GestureRecognizers>
+                                            <TapGestureRecognizer NumberOfTapsRequired="1" Tapped="OnItemSelected"></TapGestureRecognizer>
+                                        </StackLayout.GestureRecognizers>
+                                    </StackLayout>
+                                    <ContentView VerticalOptions="Center" HorizontalOptions="FillAndExpand">
+                                        <ContentView Style="{StaticResource BorderStyle}">
+                                            <ContentView Style="{StaticResource InternalViewStyle}">
+                                                <Button HorizontalOptions="End"
                                                 Text="{Binding PlayPauseDownloadIcon}"
                                                 FontFamily="{StaticResource MaterialFontFamily}"
                                                 TextColor="White" FontSize="50" x:Name="btnPlay"
                                                 Clicked="Play_Clicked"
                                                 />
-                                        </StackLayout>
-
+                                            </ContentView>
+                                        </ContentView>
+                                    </ContentView>
+                                </StackLayout>
                             </DataTemplate>
                         </CollectionView.ItemTemplate>
                     </CollectionView>
